# guardian_ai

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  publish-sdk.yml
migrations/: env.py
migrations/versions/: 001_initial_audit_log.py
policies/: default_policy.json
policies/examples/: strict_policy.json
sdk/: README.md  pyproject.toml
sdk/examples/: README.md  langchain_example.py
sdk/src/dataguard/: __init__.py  client.py  decorator.py  exceptions.py  middleware.py  models.py
sdk/tests/: conftest.py  test_client.py  test_decorator.py  test_middleware.py  test_models.py
src/guardian/: __init__.py  config.py  dependencies.py  main.py
src/guardian/api/: dashboard.py  health.py
src/guardian/api/v1/: audit.py  guardian.py  policies.py  stats.py
src/guardian/db/: session.py
src/guardian/db/repositories/: audit_repo.py
src/guardian/engine/: anthropic_scorer.py  detectors.py  orchestrator.py  policy_evaluator.py  rewriter.py  risk_scorer.py
src/guardian/middleware/: rate_limiter.py
src/guardian/models/: audit_log.py
src/guardian/schemas/: audit.py  auth.py  decision.py  policy.py  rewrite.py  tool_call.py
src/guardian/templates/: approvals.html  base.html  dashboard.html
tests/: conftest.py
tests/test_api/: test_audit_wiring.py  test_auth.py  test_dashboard.py  test_guardian_endpoint.py  test_logging.py  test_rate_limit.py  test_stats.py
tests/test_engine/: test_anthropic_scorer.py  test_detectors.py  test_orchestrator.py  test_policy_evaluator.py  test_rewriter.py
tests/test_schemas/: test_schemas.py
