[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dataguard-sdk"
version = "0.1.0"
description = "Python SDK for the DataGuard governance API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.34.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dataguard"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
