[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dataguard-sdk"
version = "0.1.0"
description = "Python SDK for the DataGuard governance API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "DataGuard Contributors" },
]
keywords = ["ai", "governance", "safety", "guardrails", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pytest-httpx>=0.34.0",
]

[project.urls]
Homepage = "https://github.com/dataguard/dataguard"
Repository = "https://github.com/dataguard/dataguard"
Issues = "https://github.com/dataguard/dataguard/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/dataguard"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
